--- a/backend/docker-compose.yaml
+++ b/backend/docker-compose.yaml
@@ -11,6 +11,7 @@ services:
       - _DB_DATABASE=vuttr
       - _DB_USERNAME=root
       - _DB_PASSWORD=root
+      - _L5_SWAGGER_CONST_HOST=http://localhost
     volumes:
       - .:/var/www
     networks:
@@ -25,7 +26,7 @@ services:
     restart: always
     tty: true
     ports:
-      - "8000:80"
+      - "3000:80"
     volumes:
       - .:/var/www
     networks:
