--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -11,8 +11,7 @@ jobs:
       - uses: actions/checkout@v2
       - name: Copy .env
         run: php -r "file_exists('.env') || copy('.env.example', '.env');"
-      - name: Install Dependencies
-        run: composer install -q --no-ansi --no-interaction --no-scripts --no-progress --prefer-dist
+      - uses: ./.github/actions/composer
       - name: Generate key
         run: php artisan key:generate
       - name: Directory Permissions
