--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -9,24 +9,29 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - name: Entering in folder backend
-        run: |
-          cd backend
       - name: Copy .env
         run: php -r "file_exists('.env') || copy('.env.example', '.env');"
-      - uses: ./.github/actions/composer
+        working-directory: backend
+      - name: Install Dependencies
+        run: composer install -q --no-ansi --no-interaction --no-scripts --no-progress --prefer-dist
+        working-directory: backend
       - name: Generate key
         run: php artisan key:generate
+        working-directory: backend
       - name: Directory Permissions
         run: chmod -R 777 storage bootstrap/cache
+        working-directory: backend
       - name: Create Database
         run: |
           mkdir -p database
           touch database/database.sqlite
+        working-directory: backend
       - name: Execute tests (Unit and Feature tests) via PHPUnit
         env:
           DB_CONNECTION: sqlite
           DB_DATABASE: database/database.sqlite
         run: vendor/bin/phpunit
+        working-directory: backend
       - name: Check Code Styles
         run: vendor/bin/phpunit app
+        working-directory: backend
